fix dark mode 2

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -55,8 +55,6 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   background-color: var(--app-bg);
-  background-image: var(--app-bg-gradient);
-  background-attachment: fixed;
   color: var(--app-text);
   scrollbar-gutter: stable;
 }
@@ -100,7 +98,6 @@ img {
   min-height: 100%;
   background-color: var(--app-bg);
   background-image: var(--app-bg-gradient);
-  background-attachment: fixed;
 }
 
 .app-wrapper {
@@ -111,7 +108,6 @@ img {
   margin: 0 auto;
   background-color: var(--app-bg);
   background-image: var(--app-bg-gradient);
-  background-attachment: fixed;
   overflow: clip;
 }
 
@@ -264,8 +260,6 @@ html.theme-dark {
 html.theme-dark,
 html.theme-dark body {
   background-color: var(--app-bg);
-  background-image: var(--app-bg-gradient);
-  background-attachment: fixed;
   color: var(--app-text);
 }
 
